# eigen-numerical-routines

./: .gitignore  CMakeLists.txt  main.cpp
include/: integrator.hpp  onedimintegrator.hpp  twodimintegrator.hpp
src/: CMakeLists.txt  configure.sh
src/odeintegrator/: CMakeLists.txt  integrator.cpp
src/quadrature/: CMakeLists.txt  onedimintegrator.cpp  twodimintegrator.cpp
src/stochastic/: CMakeLists.txt  randomgen.hpp
